config-root/namespaces/jx-staging/node-demo/node-demo-node-demo-deploy.yaml
# Source: node-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo-node-demo
  labels:
    draft: draft-app
    chart: "node-demo-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'node-demo'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: node-demo-node-demo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: node-demo-node-demo
    spec:
      serviceAccountName: node-demo-node-demo
      volumes:
        - name: config-volume
          configMap:
            name: configjs
      containers:
        - name: node-demo
          image: "ghcr.io/babadofar/node-demo:0.0.2"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/config
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1
              memory: 1524Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
