config-root/namespaces/jx-staging/node-demo/node-demo-ingress.yaml
# Source: node-demo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'node-demo'
  name: node-demo
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: node-demo
                port:
                  number: 80
      host: node-demo.jx-staging.192.168.64.2.nip.io
